non-compatible/tests/ecc-aws-132-public_instance_with_sensitive_service_is_exposed_to_entire_internet/placebo-red/ec2.DescribeSecurityGroups_1.json
{
    "status_code": 200,
    "data": {
        "SecurityGroups": [
            {
                "Description": "Managed by Terraform",
                "GroupName": "132_security_group2_red",
                "IpPermissions": [
                    {
                        "FromPort": 4505,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 4505,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "this",
                "GroupId": "sg-0025d52b5615fa738",
                "IpPermissionsEgress": [],
                "Tags": [
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Red"
                    },
                    {
                        "Key": "CustodianRule",
                        "Value": "epam-aws-132-public_instance_with_sensative_service_is_exposed_to_entire_internet"
                    }
                ],
                "VpcId": "vpc-03a907298162046de"
            },
            {
                "Description": "Managed by Terraform",
                "GroupName": "132_security_group1_red",
                "IpPermissions": [
                    {
                        "FromPort": 8000,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 8000,
                        "UserIdGroupPairs": []
                    },
                    {
                        "FromPort": 5500,
                        "IpProtocol": "tcp",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "ToPort": 5500,
                        "UserIdGroupPairs": []
                    }
                ],
                "OwnerId": "this",
                "GroupId": "sg-0abe68966e143ed67",
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1",
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ],
                        "Ipv6Ranges": [],
                        "PrefixListIds": [],
                        "UserIdGroupPairs": []
                    }
                ],
                "Tags": [
                    {
                        "Key": "CustodianRule",
                        "Value": "epam-aws-132-public_instance_with_sensative_service_is_exposed_to_entire_internet"
                    },
                    {
                        "Key": "ComplianceStatus",
                        "Value": "Red"
                    }
                ],
                "VpcId": "vpc-03a907298162046de"
            }
        ],
        "ResponseMetadata": {}
    }
}
